# fcatng

./: README.md  pyproject.toml
fcatng/: __init__.py  compare_context.py  concept.py  concept_lattice.py  concept_system.py  context.py  implication.py  mvcontext.py  partial_context.py
fcatng/algorithms/: __init__.py  aibasis.py  conceptual_exploration.py  covering_relation.py  dg_basis.py  dg_basistest.py  exploration.py  explorationtest.py  filters.py  implication_covers.py  norris.py  ordered_exploration.py  parallel_recursive.py  scaling.py
fcatng/algorithms/exploration/: exploration.py  explorationtest.py
fcatng/algorithms/exploration/examples/: bi_unars.py
fcatng/algorithms/exploration2/: command_line_exploration.py  exploration.py  explorationtest.py
fcatng/algorithms/pac/: afp.py  afpconf.py
fcatng/algorithms/tests/: dg_basis_test_data.json  implication_covers_test_data.json  norris_test_data.json  numbers_exploration.py  test_dg_basis.py  test_implication_covers.py  test_norris.py
fcatng/definitions/: __init__.py  concept_lattice.py  context.py  mvcontext.py  partial_context.py  scale.py
fcatng/readwrite/: __init__.py  comma_separated.py  cxt.py  dot.py  tab_separated.py  xml_.py
fcatng/readwrite/tests/: test_comma_separated.py  test_cxt.py  test_dot_fimi.py  test_tab_separated.py  test_xml.py
fcatng/tests/: anforderungen.txt  calculations_ni.py  claculations_ni.py  context_test_data.json  context_test_instances.json  context_test_instances.txt  helper_test.py  test_context.py
utils/: contextgenerator.py  stabilitytest.py
(+1 files in other folders)
