[project]
name = "fcatng"
version = "0.0.7"
authors = [
  { name="Tom Hanika", email="tomhanika@algebra20.de"},
]

description = "An attempt to revive fcatng packages for SAIL."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tomhanika/fcatng"
#Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


